--- a/WashEntrance_V1/WashEntrance_V1.csproj
+++ b/WashEntrance_V1/WashEntrance_V1.csproj
@@ -39,6 +39,7 @@
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Sealevel Systems\SeaMAX\Library\32-bit\SeaMAX Dot Net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logger.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
