finishing adding unit test project - all tests have been removed and are being store locally.

--- a/WashEntrance_V1/WashEntrance_Tests/WashEntrance_Tests.csproj
+++ b/WashEntrance_V1/WashEntrance_Tests/WashEntrance_Tests.csproj
@@ -70,7 +70,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Interface\ISeaMaxDeviceHandlerWrapper.cs" />
+    <Compile Include="SeaLevelThreadTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
